--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- @Author: Kwaku Amoh-Aboagye 
-@Github: ket-c
--->
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon - Learning Destiny</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/comingsoon.css">
+    <link rel="stylesheet" href="assets/css/styles.css"> <!-- New custom styles -->
 </head>
 
-
-<body class="bg-warning d-flex justify-content-center align-items-center vh-100">
+<body class="bg-light d-flex justify-content-center align-items-center vh-100">
     <section>
-        <h1 class="text-center text-dark align-middle " style="font-size: 100px">Coming Soon</h1>
+        <h1 class="section-heading text-center text-danger" style="font-size: 4rem; font-family: 'Montserrat', sans-serif;">Coming Soon</h1>
 
         <div class="d-flex justify-content-center">
-            <!-- change width for your preference based on the image size -->
-            <img width="35%" src="assets/img/Ler.svg" alt="">
+            <img width="35%" src="assets/img/Ler.svg" alt="Learning Destiny Logo">
         </div>
         <div class="d-flex justify-content-center text-center">
-            <div class="grid p-2">
+            <div class="grid p-2 timer" title="Click to learn more">
                 <p>Days</p><b class="day"></b>
             </div>
-            <div class="grid p-2">
+            <div class="grid p-2 timer" title="Click to learn more">
                 <p>Hours</p><b class="hour"></b>
             </div>
-            <div class="grid p-2">
+            <div class="grid p-2 timer" title="Click to learn more">
                 <p>Minutes</p><b class="minutes"></b>
             </div>
-            <div class="grid p-2">
+            <div class="grid p-2 timer" title="Click to learn more">
                 <p>Seconds</p><b class="seconds"></b>
             </div>
         </div>
@@ -40,21 +37,17 @@
             <code class="bg-white p-1">This website is under development</code>
         </div>
         <div class="text-center mt-5">
-
-            Contact: <a class="text-dark underline m-0 " style="font-weight: bolder" href="#" target="_blank">devabathinipranavchowdary@gmail.com</a>
-            <p class="m-0"> Learning Destiny</p>
+            Contact: <a class="text-danger underline m-0 font-weight-bold" href="mailto:devabathinipranavchowdary@gmail.com">devabathinipranavchowdary@gmail.com</a>
+            <p class="m-0 text-danger">Learning Destiny</p>
         </div>
-        
-
     </section>
 
-    <img src="" alt="">
-
-    <!-- Boostrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <!-- Coming Soon JS with timer-->
-    <script src="assets/js/comingsoon.js">
-    </script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <!-- Coming Soon JS with timer -->
+    <script src="assets/js/comingsoon.js"></script>
 </body>
 
 </html>
